# pitchfork

./: .gitignore  AGENTS.md  Makefile  pyproject.toml
_work/: README.md  codex-log.md  he-thinks-hell-keep-her.txt  invisible_labour.md  node_charter_assessment.md  pitchfork-expansion-notes.md  repo-workflow.md  todo.csv  todo.md
docs/: README.md  chatgpt_export_inventory.md  design.md  game.md  mentors.md  non_exploitative_infrastructure.md  pancakes-grimoires.md  pancakes-recipes.md  pancakes_charter_of_rights.md  pancakes_client_node_architecture.md  pancakes_embodied_ai.md  pancakes_node_infrastructure.md  pancakes_service_exchange.md  phases.md  pitchfork-contracts-reader.md  pitchfork-contracts.md  pitchfork-frequencies.md  pitchfork-household-management-model.md  pitchfork-questing.md  pitchfork-recipes-and-grimoires.md  pitchfork-server-environment.md  pitchfork-sneeds-capability.md  pitchfork-symbolic-crafting.md  pitchfork-symbolic-frequencies.md  pitchfork-symbolic-projections.md  pitchfork-testing.md  pitchfork_client_ambience.md  pitchfork_client_api_spec.md  pitchfork_data_sovereignty.md  pitchfork_economics.md  pitchfork_ecosystem.md  pitchfork_information_sources.md  pitchfork_legacy_carry_forward.md  pitchfork_magic_system_with_contracts.md  pitchfork_node_quality_of_life.md  pitchfork_overview.md  pitchfork_privacy_security.md  pitchfork_proposal.md  pitchfork_roguelike.md  pitchfork_rpg_client.md  (+2 more)
guides/: pitchfork-elves.md  pitchfork-guides.md  redwitch.html
mentors/: mentor-council.md  mentor-ecosystem.md  mentor-images.md  mentor-names.md  (+1 more)
(+77 files in other folders)
